--- a/Mango.Web/Views/Product/ProductCreate.cshtml
+++ b/Mango.Web/Views/Product/ProductCreate.cshtml
@@ -1,5 +1,8 @@
 ﻿@model Mango.Web.Models.Dto.ProductDto
 
+@{
+    ViewData["Title"] = "Create Product";
+}
 
 <form asp-action="ProductCreate">
     <br />
