--- a/Mango.Web/Views/Product/ProductEdit.cshtml
+++ b/Mango.Web/Views/Product/ProductEdit.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Mango.Web.Models.Dto.ProductDto
 
+@{
+    ViewData["Title"] = "Edit Product";
+}
 
 <form asp-action="ProductEdit">
-    <input asp-for="ProductId" hidden/>
+    <input asp-for="ProductId" hidden />
     <br />
     <div class="container border p-3">
         <h1 class="text-primary">Edit Product</h1>
