--- a/Mango.Web/Views/Product/ProductIndex.cshtml
+++ b/Mango.Web/Views/Product/ProductIndex.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<Mango.Web.Models.Dto.ProductDto>
 
+@{
+    ViewData["Title"] = "Products List";
+}
+
 <br />
 <br />
 
@@ -11,7 +15,7 @@
         <div class="col text-end pt-1">
             <a asp-action="ProductCreate" class="btn btn-outline-info"><i class="fas fa-plus"></i>Create New Product</a>
         </div>
-    </div>  
+    </div>
     <table class="table">
         <thead>
             <tr>
@@ -22,17 +26,17 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var item in Model)
+            @foreach (var item in Model)
             {
-            <tr>
-                <td>@item.Name</td>
-                <td>@item.CategoryName</td>
-                <td>@item.Price.ToString("C")</td>
-                <td>
-                    <a asp-action="ProductEdit" class="btn btn-success" asp-route-productId="@item.ProductId"><i class="fas fa-edit"></i></a>                
-                    <a asp-action="ProductDelete" class="btn btn-danger" asp-route-productId="@item.ProductId"><i class="fas fa-trash"></i></a>
-                </td>
-            </tr>
+                <tr>
+                    <td>@item.Name</td>
+                    <td>@item.CategoryName</td>
+                    <td>@item.Price.ToString("C")</td>
+                    <td>
+                        <a asp-action="ProductEdit" class="btn btn-success" asp-route-productId="@item.ProductId"><i class="fas fa-edit"></i></a>
+                        <a asp-action="ProductDelete" class="btn btn-danger" asp-route-productId="@item.ProductId"><i class="fas fa-trash"></i></a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
